# nanoGPT

./: .gitignore  .gitmodules  Agents.md  CLAUDE.md  CODEBASE_ORGANIZATION_ANALYSIS.md  NanoGPT_Quickstart.ipynb  README.md  REORGANIZATION_PLAN.md  Welcome_To_Colaboratory.ipynb  analyze_with_dataset.py  check_tokens.py  colorize_dataset.py  colorize_tui.py  compile_report.sh  default_inf_muon_adam_compare.yaml  explorations.yaml  explore_trained_model_with_dataset.py  first_association.sh  gpt_conf.py  hyperparam_search.py  link_data.sh  model.py  model_merge.py  plot_view.py  requirements_cpu.txt  requirements_gpu.txt  rl_reward_model.py  rl_train.py  run_analysis.sh  run_exploration_monitor.py  run_factor.py  run_multi_token_ntp_exploration.py  sample.py  sample2.py  sample5.py  sample_mc.py  shared_kv_cache_utils.py  shared_param_utils.py  test.py  token_prediction_colorizer.py  (+17 more)
EdgeAIApp-ExecuTorch/: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXECUTORCH_LLAMA_SETUP.md  GITHUB_CONTENT.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_PLAN.md  LICENSE  PACKAGE_INFO.md  PACKAGE_README.md  (+15 more)
report/threejs/vocab_projection/hf-vocab-sphere/: .env.example  PROJECTION_GUIDE.md  README.md  pyproject.toml
report/threejs/vocab_projection/hf-vocab-sphere/app/: __init__.py  main.py  model_store.py  projections.py  schemas.py
report/threejs/vocab_projection/hf-vocab-sphere/app/static/: app.js  styles.css
report/threejs/vocab_projection/hf-vocab-sphere/app/templates/: index.html
report/threejs/vocab_projection/hf-vocab-sphere/tests/: test_api.py  test_projections.py
(+1130 files in other folders)
