[project]
name = "hf-vocab-sphere"
version = "1.0.0"
description = "Regex token search and fidelity-aware spherical projections of Hugging Face vocabulary vectors."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.8",
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "transformers>=4.50",
  "huggingface-hub>=0.30",
  "safetensors>=0.4",
  "accelerate>=0.30",
]

[project.optional-dependencies]
umap = ["umap-learn>=0.5.7"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.7", "umap-learn>=0.5.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
